--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,4 +6,18 @@
   .icon {
     @apply hidden xl:inline-flex p-2  h-10 w-10 bg-gray-200 rounded-full text-gray-700 cursor-pointer hover:bg-gray-300 hover:text-gray-900;
   }
+
+  .meta-gradient {
+    background: #4b6cb7; /* fallback for old browsers */
+    background: -webkit-linear-gradient(
+      to right,
+      #182848,
+      #4b6cb7
+    ); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(
+      to right,
+      #182848,
+      #4b6cb7
+    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  }
 }
